examples/effects/row_mismatch_higher_order.err.expected
error: type mismatch in function call
  --> examples/effects/row_mismatch_higher_order.kai:17:25
     |
  17 | fn main() : Int { use_io(fails) }
     |                         ^
  = note: expected: ((Int) -> Int / Io) -> Int
  = note: found:    ((Int) -> Int / Fail) -> ?t0
  = note: in argument 1 of `use_io`
  = note: `use_io` expects: ((Int) -> Int / Io) -> Int
