examples/effects/row_mismatch_higher_order.kai
# m7a #2 functional test (negative) — passing a function whose
# row disagrees with the parameter's expected row must be rejected.
#
# `use_io` expects a `(Int) -> Int / Io`. `fails` has `(Int) -> Int / Fail`.
# unify_row({Fail}, {Io}) partitions labels into only_left={Fail},
# only_right={Io}; both tails are None (closed rows), so
# bind_row_tails returns None and the caller emits a type-mismatch
# diagnostic.

effect Io   { print(s: String) : Unit }
effect Fail { fail(msg: String) : Int }

fn fails(x: Int) : Int / Fail { x }

fn use_io(f: (Int) -> Int / Io) : Int { 42 }

fn main() : Int { use_io(fails) }
